# mlexercises

./: README.md  pyproject.toml
ex1/: pyproject.toml
ex1/src/: index.py
src/: exercise1.ipynb  exercise1_1.ipynb  exercise2.ipynb  exercise2_1.ipynb  exercise3.ipynb  exercise4.ipynb  exercise5.ipynb  exercise6.ipynb  index.py  project.ipynb
tests/: test_exercise1.py  test_mlexercises.py
