[tool.poetry]
name = "exercise1"
version = "0.1.0"
description = ""
authors = ["KoLiBer <koliberr136a1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "src.index:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
