[tool.poetry]
name = "mlexercises"
version = "0.1.0"
description = ""
authors = ["KoLiBer <koliberr136a1@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
jupyter = "^1.0.0"
ipykernel = "^6.5.1"
numpy = "^1.21.4"
matplotlib = "^3.5.0"
scikit-learn = "^1.0.1"
xgboost = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
